--- a/src/main/resources/static/css/ui.css
+++ b/src/main/resources/static/css/ui.css
@@ -88,6 +88,7 @@ body {
     width: 100%;
     text-align: center;
     border-collapse: collapse;
+    margin-bottom: 20px;
 }
 
 .listView thead {
