--- a/src/main/resources/static/css/ui.css
+++ b/src/main/resources/static/css/ui.css
@@ -218,3 +218,8 @@ input[type="text"] {
     margin-bottom: 3px;
     display: block;
 }
+
+.ui-widget-overlay {
+    background-color: #7F7F7F !important;
+    opacity: .5;
+}
