--- a/src/main/resources/static/css/ui.css
+++ b/src/main/resources/static/css/ui.css
@@ -7,7 +7,7 @@ body {
 .container {
     background-color: #FFFFFF;
     padding: 15px;
-    height: 100%;
+    overflow: hidden;
 }
 
 .ui-button:focus {
